# src/modules/cars/entities/Category.ts
@@ -1,26 +1,25 @@
-import {v4 as uuidV4} from "uuid"
-import{Entity, PrimaryColumn,Column, CreateDateColumn} from "typeorm"
-
+import { v4 as uuidV4 } from "uuid";
+import { Entity, PrimaryColumn, Column, CreateDateColumn } from "typeorm";
 
 @Entity("categories")
-class Category{
-    @PrimaryColumn()
-    id?:string;
+class Category {
+  @PrimaryColumn()
+  id?: string;
 
-    @Column()
-    name: string;
+  @Column()
+  name: string;
 
-    @Column()
-    description: string;
-    
-    @CreateDateColumn()
-    created_at: Date;
+  @Column()
+  description: string;
 
-    constructor() {
-        if (!this.id){
-            this.id = uuidV4();
-        }
+  @CreateDateColumn()
+  created_at: Date;
+
+  constructor() {
+    if (!this.id) {
+      this.id = uuidV4();
     }
+  }
 }
 
-export{Category}
+export { Category };
