# src/routes/categories.routes.ts
@@ -1,24 +1,26 @@
 import { request, Router } from "express";
-import multer from "multer"
+import multer from "multer";
 import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
 import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
 import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
-const categoriesRoutes = Router()
+const categoriesRoutes = Router();
 const upload = multer({
-    dest:"./tmp"
+  dest: "./tmp",
 });
 
-const createCategoryController = new CreateCategoryController()
-const importCategoryController = new ImportCategoryController()
-const listCategoriesControllers = new ListCategoriesController()
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesControllers = new ListCategoriesController();
 
-categoriesRoutes.post("/", createCategoryController.handle)
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.get("/", listCategoriesControllers.handle)
+categoriesRoutes.get("/", listCategoriesControllers.handle);
 
-categoriesRoutes.post("/import",upload.single("file"), importCategoryController.handle)
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
 
-
-export {categoriesRoutes}
-
+export { categoriesRoutes };
