# src/routes/specifications.routes.ts
@@ -1,17 +1,10 @@
 import { request, Router } from "express";
 import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
+const specificationsRoutes = Router();
 
+const createSpecificationController = new CreateSpecificationController();
 
+specificationsRoutes.post("/", createSpecificationController.handle);
 
-const specificationsRoutes= Router();
-
-const createSpecificationController = new CreateSpecificationController()
-
-
-
-
-specificationsRoutes.post("/", createSpecificationController.handle)
-
-
-export{specificationsRoutes}
+export { specificationsRoutes };
